# Line_chat_bot

./: .gitignore  README.md  db.sqlite3  et --hard f2ab1ca  manage.py  pyproject.toml  render.yaml  requirements.txt  urls.py  vercel.json
crawlers/: QS_crawler.py
example/: views.py
example/rankings/: QS_rankings.json
fordjango/: pyvenv.cfg
fordjango/Scripts/: activate  activate.bat
line_chatbot/: README.md  asgi.py  build.sh  pyproject.toml  render.yaml  requirements.txt  settings.py  urls.py  views.py  wsgi.py
line_chatbot/chatbot/: line_handler.py  urls.py  views.py
line_chatbot/crawlers/: ARWU_crawler.py  THE_crawler.py
line_chatbot/line_chatbot/: line_settings.py  settings.py  urls.py
line_chatbot/mysite/: settings.py  urls.py
line_chatbot/rankings/: ARWU_rankings.json  THE_rankings.json
line_chatbot/render/: views.py
line_chatbot/render/crawlers/: ARWU_crawler.py
mysite/: settings.py
properties/: asgi.py  settings.py  wsgi.py
vercel_app/: settings.py  urls.py  wsgi.py
